# EpochDB

./: .gitignore  2  Cargo.toml  README.md  VV  prometheus.yml  rustfmt.toml
.github/workflows/: Validation.yml
databasetest/: db  snap.0000000000000152  snap.000000000000043B  snap.00000000000006CA
examples/: basic_operations.rs  concurrency.rs  metadata.rs  prometheus_track.rs  transaction.rs  ttl.rs
src/: lib.rs  protocol.rs
src/client/: cli.rs  mod.rs
src/db/: backup.rs  errors.rs  iter.rs  mod.rs
src/db/transaction/: metric_handler.rs  mod.rs
src/metadata/: mod.rs
src/metrics/: mod.rs
src/server/: commands.rs  error.rs  mod.rs  utils.rs
tests/: backup_test.rs  db_test.rs  server_command_executor_test.rs  server_parser_test.rs  transaction_test.rs  ttl_test.rs
