[package]
name = "epoch-db"
license = "MIT OR Apache-2.0"
description = "An intelligent, persistent, and concurrent key-value store for Rust, designed to manage data with a lifecycle through frequency tracking and TTL."
repository = "https://github.com/FabioCanavarro/EpochDB"
homepage = "https://github.com/FabioCanavarro/EpochDB"
readme = "README.md"
keywords = ["database", "kv-store", "sled", "cache", "ttl"]
categories = ["database-implementations", "caching", "concurrency", "data-structures"]
version = "0.2.8"
edition = "2024"

[[bin]]
name = "epoch"
path = "./src/bin/cli.rs"

[[bin]]
name = "epoch-server"
path = "./src/bin/server.rs"

[lib]

[dependencies]
axum = "0.8.4"
bincode = { version = "2.0.1", features = ["serde", "derive"] }
chrono = "0.4.41"
metrics = "0.24.2"
metrics-exporter-prometheus = "0.17.2"
serde = { version = "1.0.219", features = ["derive"] }
sled = "0.34.7"
tempfile = "3.20.0"
tokio = { version = "1.47.1", features = ["full"] }
tracing = { version = "0.1.41", features = ["async-await", "log"] }
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "tracing"] }
zip = { version = "4.3.0", features = ["chrono"]}
